--- a/Tools/Driver.Common.props
+++ b/Tools/Driver.Common.props
@@ -46,7 +46,7 @@ Common property definitions used by all drivers:
   <!-- _NT_TARGET_MAJ is one of the components of driver version (always reflects target OS version) -->
   <!-- $(TargetOS) -->
   <!-- InfArch turns into the TargetOS inf file directive -->
-  <PropertyGroup Condition="'$(Configuration)'=='Win10 Release' OR '$(Configuration)'=='Win10 Debug'">
+  <PropertyGroup Condition="'$(Configuration)'=='Win10 Release' OR '$(Configuration)'=='Win10 Debug' OR '$(Configuration)'=='WinNext Release'">
     <_NT_TARGET_MAJ>100</_NT_TARGET_MAJ>
     <TargetOS>Win10</TargetOS>
 	<DriverTargetPlatform>Universal</DriverTargetPlatform>
