netkvm: NetCX update
Signed-off-by: Yuri Benditovich <yuri.benditovich@daynix.com>

--- a/NetKVM/NetKVM-VS2015.vcxproj
+++ b/NetKVM/NetKVM-VS2015.vcxproj
@@ -361,6 +361,7 @@
     <ClInclude Include="Common\ndis56common.h" />
     <ClInclude Include="Common\Parandis_DesignPatterns.h" />
     <ClInclude Include="Common\ParaNdis_Protocol.h" />
+    <ClInclude Include="Common\ParaNdis_Reusable.h" />
     <ClInclude Include="Common\Trace.h" />
     <ClInclude Include="Common\osdep.h" />
     <ClInclude Include="Common\ParaNdis-AbstractPath.h" />
