netkvm-prot: convert NotifyObject to dummy driver project
- remove all the redundant files from the project
- change netkvmno.cpp to dummy driver file
- change project to be driver project (to sign INF)

Signed-off-by: Yuri Benditovich <yuri.benditovich@daynix.com>

--- a/NetKVM/NotifyObject/notifyobject.vcxproj.Filters
+++ b/NetKVM/NotifyObject/notifyobject.vcxproj.Filters
@@ -15,44 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <Inf Include="*.inf" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="netkvmno.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="utils.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="netkvmno.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="netkvmno.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="netkvmno.def">
-      <Filter>Source Files</Filter>
-    </None>
-    <None Include="vioprot.inf" />
-    <None Include="netkvmno.RGS">
-      <Filter>Resource Files</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="netkvmno.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Midl Include="netkvmnoif.idl">
-      <Filter>Source Files</Filter>
-    </Midl>
   </ItemGroup>
 </Project>
