--- a/NetKVM/ProtocolService/ProtocolService.vcxproj
+++ b/NetKVM/ProtocolService/ProtocolService.vcxproj
@@ -174,7 +174,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ResourceCompile>
-      <AdditionalOptions>%(AdditionalOptions) -i $(IntDir) -N</AdditionalOptions>
+      <AdditionalOptions>%(AdditionalOptions) -i $(IntDir) -i ..\NotifyObject\Install\$(PlatformTarget)\$(ConfigurationName) -N</AdditionalOptions>
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup>
